Update 2020 Thematic Goals

--- a/docs/roadmaps/2020.md
+++ b/docs/roadmaps/2020.md
@@ -1,11 +1,9 @@
 ## Thematic Areas
 1. Productization
-  * **P1** Converging Divergent Features / Branches
+  * **P1** Converging Divergent Code
   * **P2** Standardizing Custom Features
-  * **P3** Gisida React => Gisida?
-  * **P4** Product Roadmap
-  * **P5** Feature Documentation
-  * **P6** Feature Development
+  * **P3** Feature Documentation
+  * **P4** Core Feature Development
 
 2. Operational Support
   * **O1** Support Triaging Protocols
@@ -24,9 +22,12 @@
 
 5. Project Workflow and Repository Health
   * **W1** Project Management Protocols
-  * **W2** Service Integrations
+  * **W2** Service Integrations and Workflow Optimization
   * **W3** Dependency Maintenance
-  * **W4** Workflow Optimization
-  * **W5** Technical Documentation
+  * **W4** Technical Documentation
 
 6. Security
+  * **S1** Auditing Codebases for Issues
+  * **S2** Standardize Auth and RBA
+  * **S3** Protect Private Data
+
