Update roadmap goals

--- a/docs/roadmaps/2020.md
+++ b/docs/roadmaps/2020.md
@@ -7,8 +7,8 @@
 
 2. Operational Support
   * **O1** Support Triaging Protocols
-  * **O2** Engineering Support 
-  * **O3** Client Driven Feature Development
+  * **O2** Client Driven Feature Development  
+  * **O3** Engineering Support 
 
 3. Modernization
   * **M1** FE Standardization
@@ -23,7 +23,7 @@
 5. Project Workflow and Repository Health
   * **W1** Project Management Protocols
   * **W2** Service Integrations and Workflow Optimization
-  * **W3** Dependency Maintenance
+  * **W3** Repository Maintenance
   * **W4** Technical Documentation
 
 6. Security
