--- a/docs/roadmaps/2020.md
+++ b/docs/roadmaps/2020.md
@@ -31,3 +31,30 @@
   * **S2** Standardize Auth and RBA
   * **S3** Protect Private Data
 
+## Quarterly Roadmaps
+Pulling heavily from [SRE](https://github.com/onaio/playbooks/blob/master/docs/roadmaps/2020.md) and [Canopy](https://github.com/onaio/canopy/blob/master/docs/roadmaps/2020.md) roadmaps our quarterly tables pshould be structured with the columns:
+
+* Hemisphere
+  * 🐋 Client - Stories which are client centric
+  * 🐃 Core - Stories which are core centric
+  * 🦄 Core for Client - Stories which require core updates for a client
+
+* Status
+  * ❌ Not Started
+  * 🔨 In Progress
+  * 🚧 Blocked
+  * ✅ Complete
+  * ⤵️ Moved to Next Quarter
+  * 🛑 Removed from Roadmap
+
+* Thematic Areas
+  * Comma separated list of Goals the Story works towards
+
+* Story
+  * The name of the story
+  * Linked to tickets / milestones
+
+* Owners
+  * 🆘 Needs Assignment
+  * Comma separated initials of collaborators leading the story
+
