Add 2020 Q1 roadmap table

--- a/docs/roadmaps/2020.md
+++ b/docs/roadmaps/2020.md
@@ -57,4 +57,31 @@ Pulling heavily from [SRE](https://github.com/onaio/playbooks/blob/master/docs/r
 * Owners
   * 🆘 Needs Assignment
   * Comma separated initials of collaborators leading the story
-
+  
+  
+ ### Q1
+ Hemi | Status | Thematic Area | Story | Owners
+ -- | -- | -- | -- | --
+🐃 | ✅ | P1,P2 | Standardize oAuth2 login implementation | --
+🐃 | ✅ | S3,M1 | Use env files to hide sensitive app configurations  | --
+🦄 | ✅ | O2 | Add Heatmap Layer support
+🐋 | ✅ | O3 | Lotfa Profile View Customizations
+🐃 | ⤵️ | W3 | Repository Branch and PR Cleanup
+🐃 | ✅ | W4 | Establish a /docs folder for technical and contribution docs
+🐃 | ✅ | W2 | Add test coverage reports
+🐃 | ⤵️ | M1,W3 | Increase test coverage to 50%
+🐃 | ⤵️ | M1 | Add typescript types
+🦄 | ✅ | M1,O2,P2,O3 | Standardize (public) Superset iFrame Dashboards
+🦄 | ✅ | O2,S3 | Require Authorization to enable Private Layers
+🐋 | ✅ | O3 | UNICEF Pacific Operational Support
+🐋 | ⤵️ | O3 | MESH2 / DPP & Shine Operational Support
+🐋 | ⤵️ | O3 | UNICEF Cambodia Operational Support
+🐋 | ⤵️ | O3 | UG Atlas Phase 3
+🐋 | ⤵️ | O3 | UNICEF Philippines Operational Support
+🐋 | ⤵️ | O3 | UNOPS Mozambique Operational Support
+🐋 | ✅ | O3 | Service Mapping Nutrition Sites Layer Performance
+🐋 | ✅ | O3 | UNICEF Indonesia Operational Support
+🐋 | ✅ | O3 | Global Communities Operational Support
+🐃 | ✅ | W1 | Establish Versioning Protocols
+🐃 | ✅ | M1,P1 | Design High-Level Architecture of Gisdia 2.0
+🐃 | ⤵️ | W2,O3 | Create CRA Templates to streamline new client setup
