Start 2020 Q2 roadmap table

--- a/docs/roadmaps/2020.md
+++ b/docs/roadmaps/2020.md
@@ -61,8 +61,8 @@ Pulling heavily from [SRE](https://github.com/onaio/playbooks/blob/master/docs/r
 ### Q1
 Hemi | Status | Thematic Area | Story | Owners
 -- | -- | -- | -- | --
-🐃 | ✅ | P1,P2 | Standardize oAuth2 login implementation | --
-🐃 | ✅ | S3,M1 | Use env files to hide sensitive app configurations  | --
+🐃 | ✅ | P1,P2 | Standardize oAuth2 login implementation
+🐃 | ✅ | S3,M1 | Use env files to hide sensitive app configurations
 🦄 | ✅ | O2 | Add Heatmap Layer support
 🐋 | ✅ | O3 | Lotfa Profile View Customizations
 🐃 | ⤵️ | W3 | Repository Branch and PR Cleanup
@@ -84,3 +84,18 @@ Hemi | Status | Thematic Area | Story | Owners
 🐃 | ✅ | W1 | Establish Versioning Protocols
 🐃 | ✅ | M1,P1 | Design High-Level Architecture of Gisdia 2.0
 🐃 | ⤵️ | W2,O3 | Create CRA Templates to streamline new client setup
+
+
+### Q2
+Hemi | Status | Thematic Area | Story | Owners
+-- | -- | -- | -- | --
+🐃 | 🔨 | W3 | Repository Branch and PR Cleanup
+🐃 | 🔨 | M1,W3 | Increase test coverage to 50%
+🐃 | 🔨 | M1 | Add typescript types
+🐋 | 🔨 | O3 | MESH2 / DPP & Shine Operational Support
+🐋 | 🔨 | O3 | UNICEF Cambodia Operational Support
+🐋 | 🔨 | O3 | UG Atlas Phase 3
+🐋 | 🔨 | O3 | UNICEF Philippines Operational Support
+🐋 | 🔨 | O3 | UNOPS Mozambique Operational Support
+🐃 | 🔨 | W2,O3 | Create CRA Templates to streamline new client setup | EM,KM
+🦄 | 🔨 | O2 | Mapping State to URL | PK,KM
