Denote Q2 stories which were migrated from Q1

--- a/docs/roadmaps/2020.md
+++ b/docs/roadmaps/2020.md
@@ -89,13 +89,13 @@ Hemi | Status | Thematic Area | Story | Owners
 ### Q2
 Hemi | Status | Thematic Area | Story | Owners
 -- | -- | -- | -- | --
-🐃 | 🔨 | W3 | Repository Branch and PR Cleanup
-🐃 | 🔨 | M1,W3 | Increase test coverage to 50%
-🐃 | 🔨 | M1 | Add typescript types
-🐋 | 🔨 | O3 | MESH2 / DPP & Shine Operational Support
-🐋 | 🔨 | O3 | UNICEF Cambodia Operational Support
-🐋 | 🔨 | O3 | UG Atlas Phase 3
-🐋 | 🔨 | O3 | UNICEF Philippines Operational Support
-🐋 | 🔨 | O3 | UNOPS Mozambique Operational Support
+🐃 | ⤵️🔨 | W3 | Repository Branch and PR Cleanup
+🐃 | ⤵️🔨 | M1,W3 | Increase test coverage to 50%
+🐃 | ⤵️🔨 | M1 | Add typescript types
+🐋 | ⤵️🔨 | O3 | MESH2 / DPP & Shine Operational Support
+🐋 | ⤵️🔨 | O3 | UNICEF Cambodia Operational Support
+🐋 | ⤵️🔨 | O3 | UG Atlas Phase 3
+🐋 | ⤵️🔨 | O3 | UNICEF Philippines Operational Support
+🐋 | ⤵️🔨 | O3 | UNOPS Mozambique Operational Support
 🐃 | 🔨 | W2,O3 | Create CRA Templates to streamline new client setup | EM,KM
 🦄 | 🔨 | O2 | Mapping State to URL | PK,KM
