Add wishlist section to 2020 roadmap

--- a/docs/roadmaps/2020.md
+++ b/docs/roadmaps/2020.md
@@ -75,3 +75,36 @@ Hemi | Status | Thematic Area | Story | Owners
 🐋 | ⤵️🔨 | O3 | UNOPS Mozambique Operational Support
 🐃 | 🔨 | W2,O3 | Create CRA Templates to streamline new client setup | EM,KM
 🦄 | 🔨 | O2 | Mapping State to URL | PK,KM
+
+## Wish List
+1. Product Feature List Documentation
+2. 🏹Merging Divergent Branches
+3. Use MapBox JS as a Library
+4. Superset Authentication check Fix
+5. Automating Client Deployments
+6. Full Security Audit of all Repositories
+7. Gisida 2.0 as a Learna Library 
+8. 🏹 Increase Test Coverage to 85%
+9. 🏹 Project Management Documentation
+10. Strict Linting on All Repositories
+11. Increase Doc-String Coverage to 100%
+12. Increase Typescript Declaration Coverage to 100%
+13. Increase Gisida Performance and Optimization
+14. 🏹 Migrate Generic and Reusable code to JS Tools
+15. Support Typescript Modules / Components
+16. 🏹 Refactor Reducers/Actions/Selectors into Ducks Modules
+17. Define and Utilize Layer Defaults
+18. Akuko / Layer Builder Connector
+19. Initiate Gisida Store with Reducer Registry
+20. Generalize and Parameterize Custom Profile Views
+21. Generalize and Parameterize Custom Infographic Dashboards
+22. Standardize Role Based Access to Layers and View
+23. Standardize use of the Superset Connector (as a Service)
+24. Use Superset Slices for Infographic Dashboards
+25. Add Google Sheets Integration
+26. Add an HDX Connector
+27. Add Storybooks for Component/Package/API Documentation
+28. Responsive Design and Mobile Optimization
+29. Suggested Design Updates from Unicef Mozambique
+30. Auto generate Technical Documentation
+31. Increase Test Coverage to 95%
