Update 2020 roadmap based on Roadmapping Discussion

--- a/docs/roadmaps/2020.md
+++ b/docs/roadmaps/2020.md
@@ -65,46 +65,42 @@ Hemi | Status | Thematic Area | Story | Owners
 ### Q2
 Hemi | Status | Thematic Area | Story | Owners
 -- | -- | -- | -- | --
-🐃 | ⤵️🔨 | W3 | Repository Branch and PR Cleanup
-🐃 | ⤵️🔨 | M1,W3 | Increase test coverage to 50%
-🐃 | ⤵️🔨 | M1 | Add typescript types
-🐋 | ⤵️🔨 | O3 | MESH2 / DPP & Shine Operational Support
-🐋 | ⤵️🔨 | O3 | UNICEF Cambodia Operational Support
-🐋 | ⤵️🔨 | O3 | UG Atlas Phase 3
-🐋 | ⤵️🔨 | O3 | UNICEF Philippines Operational Support
-🐋 | ⤵️🔨 | O3 | UNOPS Mozambique Operational Support
+🐋 |	⤵️🔨	| O3 |	UG Atlas Phase 3 | EM,CK
+🐃 | ⤵️🔨 | W3 | Repository Branch and PR Cleanup | PK
+🐃 | ⤵️🔨 | M1,W3 | Increase test coverage to 50% | EM
+🐃 | 🔨 | M1 | Add Typescript Types | KM
+🐋 | ❌ | O3 | Create list of operational support and create schedule, better tracking | PK,CK
 🐃 | 🔨 | W2,O3 | Create CRA Templates to streamline new client setup | EM,KM
 🦄 | 🔨 | O2 | Mapping State to URL | PK,KM
+🐃 | ❌ | W2 | Automating Client Deployments | EM
+🐋 | ❌ | M1 | Superset Authentication check Fix | CK
+🐃 | ❌ | M1 | Define and Utilize Layer Defaults | PK,KM
+🐃 | 🔨 | P3 | Product Feature List Documentation | AK
+🐋 | ❌ | P4 | Google Sheets and HDX Integrations | EM
+🐃 | ❌ | W2 | Turn on Security Integrations | UK
+🐃 | ❌ | W1 | Project Management Documentation | UK,AK
+🐃 | ❌ | W2 | Strict Linting on All Repositories | CK
+🐃 | ❌ | P3,W4 | Generate Documentation from Docstrings | KM
+🐃 | ❌ | M2 | Define list of Components that are reusable and should migrate (and ideally migrate 2-3) | CK
+🐃 | ❌ | M1 | Standardize use of the Superset Connector (as a Service) (conor to add more details) | CK
+🦄 | ❌ | P2 | Generalize and Parameterize Custom Profile Views & Infographic Dashboards (if part of a project) | 🆘
+🐃 | ❌ | M1,W3 | Increase Gisida Performance and Optimization (requires technical discussion to scope) | CK
+🦄 | ❌ | O2 | Suggested Design Updates from Unicef Mozambique | 🆘
+
 
 ## Wish List
-1. Product Feature List Documentation
-2. 🏹Merging Divergent Branches
-3. Use MapBox JS as a Library
-4. Superset Authentication check Fix
-5. Automating Client Deployments
-6. Full Security Audit of all Repositories
-7. Gisida 2.0 as a Learna Library 
-8. 🏹 Increase Test Coverage to 85%
-9. 🏹 Project Management Documentation
-10. Strict Linting on All Repositories
-11. Increase Doc-String Coverage to 100%
-12. Increase Typescript Declaration Coverage to 100%
-13. Increase Gisida Performance and Optimization
-14. 🏹 Migrate Generic and Reusable code to JS Tools
-15. Support Typescript Modules / Components
-16. 🏹 Refactor Reducers/Actions/Selectors into Ducks Modules
-17. Define and Utilize Layer Defaults
-18. Akuko / Layer Builder Connector
-19. Initiate Gisida Store with Reducer Registry
-20. Generalize and Parameterize Custom Profile Views
-21. Generalize and Parameterize Custom Infographic Dashboards
-22. Standardize Role Based Access to Layers and View
-23. Standardize use of the Superset Connector (as a Service)
-24. Use Superset Slices for Infographic Dashboards
-25. Add Google Sheets Integration
-26. Add an HDX Connector
-27. Add Storybooks for Component/Package/API Documentation
-28. Responsive Design and Mobile Optimization
-29. Suggested Design Updates from Unicef Mozambique
-30. Auto generate Technical Documentation
-31. Increase Test Coverage to 95%
+1. 🏹Merging Divergent Branches
+2. Use MapBox JS as a Library
+3. Gisida 2.0 as a Learna Library
+4. Strict Linting on All Repositories
+5. Increase Doc-String Coverage to 100%
+6. Increase Typescript Declaration Coverage to 100%
+7. 🏹 Migrate Generic and Reusable code to JS Tools
+8. 🏹 Refactor Reducers/Actions/Selectors into Ducks Modules
+9. Initiate Gisida Store with Reducer Registry
+10. Akuko / Layer Builder Connector
+11. Standardize Role Based Access to Layers and View
+12. Use Superset Slices for Infographic Dashboards
+13. Add Storybooks for Component/Package/API Documentation
+14. Responsive Design and Mobile Optimization
+15. Increase Test Coverage to 95%
