--- a/docs/roadmaps/2020.md
+++ b/docs/roadmaps/2020.md
@@ -65,25 +65,25 @@ Hemi | Status | Thematic Area | Story | Owners
 ### Q2
 Hemi | Status | Thematic Area | Story | Owners
 -- | -- | -- | -- | --
-🐋 |	⤵️🔨	| O3 |	UG Atlas Phase 3 | EM,CK
+🐋 |	⤵️🔨	| O3 |	UG Atlas Phase 3 | 🆘
 🐃 | ⤵️🔨 | W3 | Repository Branch and PR Cleanup | PK
-🐃 | ⤵️🔨 | M1,W3 | Increase test coverage to 50% | EM
+🐃 | ⤵️🔨 | M1,W3 | Increase test coverage to 50% | PK,KM
 🐃 | 🔨 | M1 | Add Typescript Types | KM
 🐋 | ❌ | O3 | Create list of operational support and create schedule, better tracking | PK,CK
-🐃 | 🔨 | W2,O3 | Create CRA Templates to streamline new client setup | EM,KM
-🦄 | 🔨 | O2 | Mapping State to URL | PK,KM
-🐃 | ❌ | W2 | Automating Client Deployments | EM
-🐋 | ❌ | M1 | Superset Authentication check Fix | CK
+🐃 | ✅ | W2,O3 | Create CRA Templates to streamline new client setup | EM,KM
+🦄 | ✅ | O2 | Mapping State to URL | PK,KM
+🐃 | ❌ | W2 | Automating Client Deployments | 🆘
+🐋 | ❌ | M1 | Superset Authentication check Fix | 🆘
 🐃 | ❌ | M1 | Define and Utilize Layer Defaults | PK,KM
 🐃 | 🔨 | P3 | Product Feature List Documentation | AK
-🐋 | ❌ | P4 | Google Sheets and HDX Integrations | EM
+🐋 | ❌ | P4 | Google Sheets and HDX Integrations | 🆘
 🐃 | ❌ | W2 | Turn on Security Integrations | UK
-🐃 | ❌ | W1 | Project Management Documentation | UK,AK
-🐃 | ❌ | W2 | Strict Linting on All Repositories | CK
+🐃 | 🔨 | W1 | Project Management Documentation | UK,AK
+🐃 | ❌ | W2 | Strict Linting on All Repositories | PK
 🐃 | ❌ | P3,W4 | Generate Documentation from Docstrings | KM
 🐃 | ❌ | M2 | Define list of Components that are reusable and should migrate (and ideally migrate 2-3) | CK
 🐃 | ❌ | M1 | Standardize use of the Superset Connector (as a Service) (conor to add more details) | CK
-🦄 | ❌ | P2 | Generalize and Parameterize Custom Profile Views & Infographic Dashboards (if part of a project) | 🆘
+🦄 | ❌ | P2 | Generalize and Parameterize Custom Profile Views & Infographic Dashboards (if part of a project) | UK,KM,PK
 🐃 | ❌ | M1,W3 | Increase Gisida Performance and Optimization (requires technical discussion to scope) | CK
 🦄 | ❌ | O2 | Suggested Design Updates from Unicef Mozambique | 🆘
 
